# CMake-vcpkg-project-template

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
app/: CMakeLists.txt  f.h  g.h
tests/: CMakeLists.txt  second_tests.cpp  tests.cpp
